# gitmail

./: .env.example  .gitattributes  .gitignore  README.md  config.example.yaml  gitmail-cli.spec  pyproject.toml  test.bat  test.sh  update.bat  update.sh
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: EllipsisTooltip.jsx  GitMailLogo.jsx  GitMailMark.jsx  Layout.jsx  MarkdownContent.jsx  RecentCommitCell.jsx  RelativeTime.jsx  RepoList.jsx  ThemeBar.jsx  ThemeIcons.jsx
frontend/src/pages/: AllRepos.jsx  Settings.jsx  Subscriptions.jsx  Webhooks.jsx
frontend/src/theme/: palettes.css  theme-base.css  theme-boot.js  theme-config.js
frontend/src/utils/: markdownPreview.js
src/app_main/: __main__.py  app.py  config_loader.py  env_settings.py  feature_runtime.py  logging_setup.py  paths.py  runtime.py  startup_checks.py  startup_display.py  terminal_theme.py
src/app_main/ai/: formatting.py  prompts.py  summarizer.py
src/app_main/api/: __init__.py  deps.py  repos.py  settings.py  status.py  subscriptions.py  user.py  (+1 more)
tests/: test_ai_formatting.py  test_ai_store.py  test_ai_summarizer.py  test_client_ip.py  test_gerrit_refs.py  test_gerrit_urls.py  test_git_commands.py  test_lan_resolve.py  test_logging_startup.py  test_mail_ai_summary.py  test_startup_checks.py  test_status.py  test_user_resolver.py  test_webhooks.py
tools/: bundle_release.py  ci_pack_ubuntu16.sh  collect_lan_binaries.py  pack.bat  pack.sh  pyi_rth_lan_bin.py
(+18 files in other folders)
