[project]
name = "gitmail"
version = "0.0.0"
description = "Git 邮件相关本地 Web 工具"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["app_main*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
